--- a/App/MainWindow/MainWindow.ui
+++ b/App/MainWindow/MainWindow.ui
@@ -112,7 +112,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab_power">
        <attribute name="title">
@@ -156,19 +156,6 @@
          </size>
         </property>
         <property name="title">
-         <string>TestPanel</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pb_testpanel">
-        <property name="geometry">
-         <rect>
-          <x>570</x>
-          <y>20</y>
-          <width>101</width>
-          <height>51</height>
-         </rect>
-        </property>
-        <property name="text">
          <string>TestPanel</string>
         </property>
        </widget>
@@ -637,6 +624,19 @@
          </property>
          <property name="text">
           <string>无NULL</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1" rowspan="3">
+        <widget class="QPushButton" name="pb_testpanel">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>TestPanel</string>
          </property>
         </widget>
        </item>
