--- a/App/SystemSettingPanel/SystemSettingPanel.ui
+++ b/App/SystemSettingPanel/SystemSettingPanel.ui
@@ -58,7 +58,7 @@ Apply</string>
    <item row="1" column="0" colspan="4">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab_comm">
       <attribute name="title">
@@ -387,20 +387,6 @@ Apply</string>
           <enum>QFrame::Raised</enum>
          </property>
          <layout class="QGridLayout" name="gridLayout_3">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_17">
-            <property name="text">
-             <string>碰边回退距离(um)</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QDoubleSpinBox" name="dsb_drill_touch_speed">
-            <property name="maximum">
-             <double>1000000.000000000000000</double>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="1">
            <widget class="QDoubleSpinBox" name="dsb_drill_touch_return_length">
             <property name="maximum">
@@ -418,6 +404,13 @@ Apply</string>
             </property>
            </widget>
           </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_17">
+            <property name="text">
+             <string>碰边回退距离(um)</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="0">
            <widget class="QLabel" name="label_18">
             <property name="text">
@@ -429,6 +422,23 @@ Apply</string>
            <widget class="QPushButton" name="pb_enable_auto_opump">
             <property name="text">
              <string>自动外冲液</string>
+            </property>
+            <property name="checkable">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QDoubleSpinBox" name="dsb_drill_touch_speed">
+            <property name="maximum">
+             <double>1000000.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <widget class="QPushButton" name="pb_enable_auto_recorddata">
+            <property name="text">
+             <string>自动记录数据</string>
             </property>
             <property name="checkable">
              <bool>true</bool>
