--- a/App/TestPanel/TestPanel.ui
+++ b/App/TestPanel/TestPanel.ui
@@ -43,24 +43,37 @@ Detected</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QPushButton" name="pb_test_xy_posmove">
+   <item row="2" column="0" colspan="2">
+    <widget class="QLabel" name="label">
      <property name="text">
-      <string>TestXY_POS</string>
+      <string>Feed Probablity</string>
      </property>
     </widget>
+   </item>
+   <item row="4" column="0" colspan="2">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Speed (0.00-10)(um/ms)</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item row="1" column="1">
     <widget class="QPushButton" name="pb_test_yz_negmove">
      <property name="text">
       <string>TestYZ_NEG</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Feed Probablity</string>
      </property>
     </widget>
    </item>
@@ -83,35 +96,6 @@ Detected</string>
      </property>
      <property name="tickInterval">
       <number>50</number>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0" colspan="2">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Speed (0.00-10)(um/ms)</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0">
-    <widget class="QSlider" name="horizontalSlider_servo_2">
-     <property name="minimum">
-      <number>0</number>
-     </property>
-     <property name="maximum">
-      <number>100</number>
-     </property>
-     <property name="value">
-      <number>10</number>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="tickPosition">
-      <enum>QSlider::TicksBelow</enum>
-     </property>
-     <property name="tickInterval">
-      <number>10</number>
      </property>
     </widget>
    </item>
@@ -154,6 +138,35 @@ Detected</string>
        </widget>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QPushButton" name="pb_test_xy_posmove">
+     <property name="text">
+      <string>TestXY_POS</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
+    <widget class="QSlider" name="horizontalSlider_servo_2">
+     <property name="minimum">
+      <number>0</number>
+     </property>
+     <property name="maximum">
+      <number>100</number>
+     </property>
+     <property name="value">
+      <number>10</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="tickPosition">
+      <enum>QSlider::TicksBelow</enum>
+     </property>
+     <property name="tickInterval">
+      <number>10</number>
+     </property>
     </widget>
    </item>
    <item row="7" column="0" colspan="2">
@@ -259,20 +272,7 @@ Detected</string>
      </layout>
     </widget>
    </item>
-   <item row="8" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="3" column="2" rowspan="5">
+   <item row="3" column="2" rowspan="5" colspan="2">
     <widget class="QGroupBox" name="groupBox_3">
      <property name="title">
       <string>导向器测试</string>
@@ -505,6 +505,22 @@ Detected</string>
        </widget>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item row="2" column="2">
+    <widget class="QPushButton" name="pb_test_stop_audio_record">
+     <property name="text">
+      <string>TestAudio
+RecordStop</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="pb_test_start_audio_record">
+     <property name="text">
+      <string>TestAudio
+RecordStart</string>
+     </property>
     </widget>
    </item>
   </layout>
