--- a/Conf/gui.qss
+++ b/Conf/gui.qss
@@ -56,6 +56,7 @@ color: rgb(59, 59, 59);
 border:1px groove rgb(59, 59, 59);
 }
 
+#InfoPanel QPushButton#pb_display_zynq:!checked,
 #InfoPanel QPushButton#pb_display_ecat_enabled:!checked,
 #InfoPanel QPushButton#pb_display_ecat_connected:!checked {
 background-color: #D04545;
